<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_category__general"
        app:allowDividerBelow="false">
        <ListPreference
            app:defaultValue="ru"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="@string/prefs__language"
            app:title="@string/pref_titles__lang"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="day"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/prefs__theme"
            app:title="@string/pref_titles__theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>