<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LAYOUT__SYNC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="top"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <RelativeLayout
        android:id="@+id/LAYOUT__AUTO_SYNC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/chk_label__auto_sync"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/CHK__AUTO_SYNC"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="32dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleX="1.3"
            android:scaleY="1.3" />
    </RelativeLayout>

    <Button
        android:id="@+id/BTN__SYNC"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/LAYOUT__AUTO_SYNC"
        android:text="@string/btn_label__sync"
        android:textSize="19sp"
        android:theme="@style/PrimaryButton"
        app:rippleColor="@color/primary_button_ripple" />

    <FrameLayout
        android:id="@+id/LAYOUT__SYNC_STATE"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/BTN__SYNC">

        <ProgressBar
            android:id="@+id/PRBAR__SYNC"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:indeterminateDuration="2000"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/IMG__SYNC_FINISHED"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc__sync_finished"
            android:src="@drawable/image_sync_check"
            android:scaleX="5"
            android:alpha="0"
            android:scaleY="0"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/TXT__SYNC_HINT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LAYOUT__SYNC_STATE"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_hint__sync"
        android:visibility="gone" />

    <Button
        android:id="@+id/BTN__START_EVENT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:alpha="0"
        android:text="@string/btn_label__start_event"
        android:textSize="22sp"
        android:theme="@style/PrimaryButton"
        android:visibility="gone"
        app:rippleColor="@color/primary_button_ripple" />

</RelativeLayout>

